--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.0.2",
+    "@heroicons/react": "^1.0.6",
+    "emoji-mart": "^5.1.0",
+    "firebase": "^9.8.3",
+    "heroicons": "^1.0.6",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.3"
   }
 }
